<resources>
    <string name="app_name">Restaurante SQLite</string>

    <string name="login">Ingresar</string>
    <string name="login_redirection">¿ya tienes cuenta?</string>

    <string name="register">Registrarse</string>
    <string name="register_redirection">¿no tienes cuenta?</string>

    <string name="User">Nombre de usuario</string>
    <string name="Pass">Contraseña</string>
    <string name="email">Email@mail.com</string>
    <string name="tel">Celular</string>

    <string name="Submit_login">ingresar</string>
    <string name="Submit_register">registrarse</string>

    <!-- Reservas -->
    <string name="TituloReservas">Reservar</string>
    <string name="nombreReserva">Nombre del representante</string>
    <string name="personasReresva">Núero de asistentes</string>
    <string name="dateRegister">Día de la reserva</string>
    <string name="timeRegister">Hora de la reserva</string>
    <string name="btn_reservar">Reservar</string>

    <!-- Horarios -->
    <string name="TituloHorario">Horarios</string>

    <!-- Menu superior-->

    <string name="item_inicio">Inicio</string>
    <string name="item_reservar">Reservar</string>
    <string name="item_mis_reservas">Mis Reservas</string>
    <string name="item_cancelar">Cancelar Reservas</string>
    <string name="item_menu">Menú</string>
    <string name="item_editar">Cambiar Reserva</string>
    <string name="item_salir">Salir</string>

    <!-- Menu Vista -->
    <string name="title_menu">Menú</string>
    <string name="entradas">Comidas</string>
    <string name="postres">postres</string>
    <string name="bebidas">bebidas</string>

    <!-- Editar Reserva -->
    <string name="titulo_editar">Cambiar Reservas</string>
    <string name="buscarReservas">Buscar reserva</string>
    <string name="cancelarReservas">Cancelar reserva</string>
    <string name="editarReservas">Guardar</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>