<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="408dp"
        android:layout_height="212dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_menu"
        app:srcCompat="@drawable/restaurant_menu" />

    <TextView
        android:id="@+id/title_menu"
        android:layout_width="373dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_menu"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="307dp"
        android:layout_height="65dp"
        android:layout_marginTop="44dp"
        android:text="@string/entradas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="307dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:text="@string/bebidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="307dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:text="@string/postres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>