<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Editar_reservas">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="410dp"
        android:layout_height="65dp"
        android:text="@string/titulo_editar"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="359dp"
        android:layout_height="669dp"
        android:layout_marginTop="212dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameRepre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/nombreReserva"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/numPersn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/personasReresva"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/dateRegister"
                android:inputType="date"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/timeRegister"
                android:inputType="time"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/btn_reservar"
                    android:layout_width="149dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:backgroundTint="@color/purple_500"
                    android:onClick="Buscar"
                    android:text="@string/buscarReservas"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="@color/purple_500"
                    android:onClick="cancelar"
                    android:text="@string/cancelarReservas"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/purple_500"
                android:onClick="modificar"
                android:text="@string/editarReservas"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="409dp"
        android:layout_height="134dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:srcCompat="@drawable/emblemsynchronizing_93485" />


</androidx.constraintlayout.widget.ConstraintLayout>